--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,103 @@
-body {
+body{
+  margin: 5px;
+  padding: 0;
+  width: calc(100% - 5px * 2);
+  height: calc(100% - 5px * 2);
+  overflow: hidden;
+  background: #000;
+  color: #fff;
+}
+.dragable{
+  -webkit-app-region: drag;
+  height: 100%;
+}
+div{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+.active{
+  -webkit-app-region: no-drag;  
+}
+.col-h-2{
+  height: calc((100vh - 5px * 2) * 0.2);
+  line-height: 20vh;
+  vertical-align: middle;
+  text-align: center;
+}
+.col-h-6{
+  height: calc((100vh - 5px * 2) * 0.6);
+  line-height: 60vh;
+  text-align: center;
+}
+.container, .row{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+#close{
+  position: absolute;
+  top: 0;
+  right: 0;
+  background:#E91E63;
+  opacity: 0;
+  transition: all 100ms 0s ease;
+}
+#close:hover{
+  opacity: 0.75;
+  transition:all 300ms 0s ease;
+}
+#search{
+  position: absolute;
+  top: 0;
+  left: calc(100% / 6);
+  opacity: 0;
+  transition: all 100ms 0s ease;
+}
+#search:hover{
+  opacity: 0.75;
+  transition:all 300ms 0s ease;
+}
+#back{
+  position: absolute;
+  top: 20vh;
+  left: 0;
+  opacity: 0;
+  transition: all 100ms 0s ease;
+}
+#back:hover{
+  opacity: 0.75;
+  transition:all 300ms 0s ease;
+}
+#next{
+  position: absolute;
+  top: 20vh;
+  right: 0;
+  opacity: 0;
+  transition: all 100ms 0s ease;
+}
+#next:hover{
+  opacity: 0.75;
+  transition:all 300ms 0s ease;
+}
+#play{
+  position: absolute;
+  top: 20vh;
+  left: calc(100% / 6);
+  opacity: 0;
+  transition: all 100ms 0s ease;
+}
+#play:hover{
+  opacity: 0.75;
+  transition:all 300ms 0s ease;
+}
+#setting{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  transition: all 100ms 0s ease;
+}
+#setting:hover{
+  opacity: 0.75;
+  transition:all 300ms 0s ease;
 }
