--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,12 @@ div{
   padding: 0;
 }
 .active{
-  -webkit-app-region: no-drag;  
+  -webkit-app-region: no-drag; 
+  background: #ccc;
+}
+.deactive{
+  -webkit-app-region: no-drag; 
+  height: inherit;
 }
 .col-h-2{
   height: calc((100vh - 5px * 2) * 0.2);
